--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,11 +43,13 @@
         </activity>
         <activity
             android:name=".ui.activity.PlayActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="sensorLandscape"
             android:supportsPictureInPicture="true"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation" />
         <activity
             android:name=".ui.activity.DetailActivity"
+            android:theme="@style/AppTheme.ActionBar"
             android:screenOrientation="sensorLandscape"
             android:supportsPictureInPicture="true"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation" />
@@ -56,6 +58,7 @@
             android:screenOrientation="sensorLandscape" />
         <activity
             android:name=".ui.activity.LivePlayActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="sensorLandscape"
             android:supportsPictureInPicture="true"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation" />
