--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,16 +54,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError false
-    }
-    dexOptions {
-        javaMaxHeapSize "4g"
-    }
     buildFeatures {
         dataBinding = true
+    }
+    namespace 'com.github.tvbox.osc'
+    lint {
+        abortOnError false
+        checkReleaseBuilds false
     }
 
 //    splits {
