--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:allowBackup="true"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:hardwareAccelerated="true"
+        android:requestLegacyExternalStorage="true"
         android:icon="@drawable/app_icon"
         android:banner="@drawable/app_banner"
         android:label="@string/app_name"
