--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,9 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+    //noinspection GradleDependency
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    //noinspection GradleDependency
     implementation 'com.squareup.okio:okio:2.6.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
     implementation 'com.kingja.loadsir:loadsir:1.3.8'
