--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ def static buildTime() {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId 'com.github.tvbox.osc.tk'
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0.".concat(buildTime())
         multiDexEnabled true
@@ -21,13 +21,16 @@ android {
             }
         }
     }
-
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES']
+        }
     }
+
 
     buildTypes {
         debug {
+            multiDexKeepProguard file('multidex-config.pro')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             minifyEnabled false
 
@@ -36,6 +39,8 @@ android {
             }
         }
         release {
+            debuggable true
+            multiDexKeepProguard file('multidex-config.pro')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             minifyEnabled true
 
@@ -49,19 +54,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError false
-    }
-    dexOptions {
-        javaMaxHeapSize "4g"
-        additionalParameters += '--multi-dex'
-        additionalParameters += '--set-max-idx-number=48000'
-        additionalParameters += '--minimal-main-dex'
-    }
     buildFeatures {
         dataBinding = true
+    }
+    namespace 'com.github.tvbox.osc'
+    lint {
+        abortOnError false
+        checkReleaseBuilds false
     }
 
 //    splits {
@@ -86,21 +85,23 @@ dependencies {
     implementation 'com.github.NanoHttpd.nanohttpd:nanohttpd:nanohttpd-project-2.3.1'
     implementation 'com.github.NanoHttpd.nanohttpd:nanohttpd:nanohttpd-websocket-2.3.1'
     implementation 'com.google.zxing:core:3.4.1'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation files('libs\\thunder.jar')
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation files('libs/thunder.jar')
 
-    annotationProcessor 'androidx.room:room-compiler:2.3.0'
-    implementation 'androidx.room:room-runtime:2.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.5.1'
+    implementation 'androidx.room:room-runtime:2.5.1'
     implementation 'androidx.multidex:multidex:2.0.1'
+    //noinspection GradleDependency
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    //noinspection GradleDependency
     implementation 'com.squareup.okio:okio:2.6.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
     implementation 'com.kingja.loadsir:loadsir:1.3.8'
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'me.jessyan:autosize:1.2.1'
     implementation('com.thoughtworks.xstream:xstream:1.4.15') {
@@ -109,7 +110,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'com.orhanobut:hawk:2.0.1'
 
-    implementation "androidx.annotation:annotation:1.5.0"
+    implementation "androidx.annotation:annotation:1.6.0"
     implementation "com.google.android.exoplayer:exoplayer-core:" + rootProject.ext.exoVersion
     implementation "com.google.android.exoplayer:exoplayer-dash:" + rootProject.ext.exoVersion
     implementation "com.google.android.exoplayer:exoplayer-hls:" + rootProject.ext.exoVersion
@@ -134,9 +135,12 @@ dependencies {
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
     implementation 'org.apache.commons:commons-text:1.7'
     implementation 'com.github.seven332:jcifs:1.3.19'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.0'
     configurations {
         all {
-            exclude group: 'xpp3', module: 'xpp3'
+            exclude group: 'xpp3', module: 'xpp3_min'
+            exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
+            exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
         }
     }
 }
